QQuickMessageDialog: improve the documentation for buttonClicked()

The buttonClicked signal was poorly documented, since it didn't really
tell the reader how you are supposed to handle the signal.

This patch aims to clarify it a bit better, by providing an example.

Fixes: QTBUG-102865
Change-Id: I9398aa140b757720da9e75daad6298d6fd2cd423
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>